--- a/requirements.txt
+++ b/requirements.txt
@@ -10,14 +10,15 @@ django-celery==3.0.11
 feedparser==5.1.2
 html5lib==0.95
 httplib2==0.7.6
-icalendar==3.1
+icalendar==3.9.0
 kombu==2.4.7
 lxml==3.0.1
 mimeparse==0.1.3
-oauth2==1.5.211
+#oauth2==1.5.211
 python-dateutil==1.5
 python-digest==1.7
 pytz==2012f
+#requests-oauthlib==0.4.2
 six==1.2.0
 south==0.8.2
 unittest-xml-reporting==1.11.0
