--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==1.7.7
 PyYAML==3.10
 amqplib==1.0.2
 anyjson==0.3.3
+beautifulsoup4==4.3.2
 billiard==2.7.3.17
 biplist==0.5
 celery==3.0.11
@@ -14,12 +15,10 @@ icalendar==3.9.0
 kombu==2.4.7
 lxml==3.0.1
 mimeparse==0.1.3
-#oauth2==1.5.211
-python-dateutil==1.5
+python-dateutil==2.4.2
 python-digest==1.7
 pytz==2012f
-#requests-oauthlib==0.4.2
+requests-oauthlib==0.4.2
 six==1.2.0
 south==0.8.2
-unittest-xml-reporting==1.11.0
 wsgiref==0.1.2
