--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ billiard==2.7.3.17
 biplist==0.5
 celery==3.0.11
 django-celery==3.0.11
+django-oauth-toolkit==0.8.0
 django-tastypie==0.12.1
+django-tastypie-oauth==0.0.3
 feedparser==5.1.2
 html5lib==0.99
 httplib2==0.7.6
@@ -16,13 +18,11 @@ icalendar==3.9.0
 kombu==2.4.7
 lxml==3.0.1
 mimeparse==0.1.3
-oauthlib==0.6.2
+#oauthlib==0.6.2
 python-dateutil==2.4.2
 python-digest==1.7
 pytz==2012f
-requests-oauthlib==0.4.2
 six==1.9.0
 south==0.8.2
 unittest-xml-reporting==1.11.0
-wsgiref==0.1.2
 selenium==2.45.0
