--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ icalendar==3.9.0
 kombu==2.4.7
 lxml==3.0.1
 mimeparse==0.1.3
-#oauthlib==0.6.2
+oauthlib==0.6.2
 python-dateutil==2.4.2
 python-digest==1.7
 pytz==2012f
