--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
 # This is a requirements file for pip
 Django==1.7.7
 PyYAML==3.10
-amqplib==1.0.2
+#amqplib==1.0.2
 anyjson==0.3.3
 beautifulsoup4==4.3.2
-billiard==2.7.3.17
+#billiard==2.7.3.17
 biplist==0.5
-celery==3.0.11
-django-celery==3.0.11
+#celery==3.0.11
+#django-celery==3.0.11
 django-tastypie==0.12.1
 feedparser==5.1.2
 html5lib==0.99
 httplib2==0.7.6
 icalendar==3.9.0
-kombu==2.4.7
+#kombu==2.4.7
 lxml==3.0.1
 mimeparse==0.1.3
 oauthlib==0.6.2
@@ -23,5 +23,4 @@ pytz==2012f
 six==1.9.0
 south==0.8.2
 unittest-xml-reporting==1.11.0
-#wsgiref==0.1.2
 selenium==2.45.0
