--- a/requirements.txt
+++ b/requirements.txt
@@ -9,20 +9,10 @@ oauthlib==0.6.2
 python-dateutil==2.4.2
 python-mimeparse==0.1.4
 pytz===2012f
+requests==2.7.0
 six==1.9.0
 South==0.8.2
 unittest-xml-reporting==1.11.0
 
 #selenium==2.45.0
 #nose==1.3.6
-
-#PyYAML==3.10
-#amqplib==1.0.2
-#anyjson==0.3.3
-#billiard==2.7.3.17
-#biplist==0.5
-#celery==3.0.11
-#django-celery==3.0.11
-#html5lib==0.99
-#httplib2==0.7.6
-#kombu==2.4.7
