--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 beautifulsoup4==4.3.2
 Django==1.7.7
 django-tastypie==0.12.1
-feedparser==5.2.0
+feedparser
 icalendar==3.9.0
 mimeparse==0.1.3
 oauthlib==0.6.2
