--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ mimeparse==0.1.3
 oauthlib==0.6.2
 python-dateutil==2.4.2
 python-mimeparse==0.1.4
-pytz===2012f
+pytz
 requests==2.7.0
 six==1.9.0
 South==0.8.2
