--- a/exercises/sample_course/hello_git.yaml
+++ b/exercises/sample_course/hello_git.yaml
@@ -1,44 +1,24 @@
 ---
-# This is an example of grading submission from Git.
-#
-# Further comments could include
-# - author information
-# - exercise motivation and purpose
-# - history of course instances/years
-
 title: Grade from Git
-
-# An optional META description
-#description:
-
-# Optional exercise instructions displayed by default templates.
+description: An example of accessing user's Git repository
 instructions: |
-
-  <h1>Grade from Git</h1>
-
-  <p>This is an example of grading a submission from user's Git repository.</p>
-
-# Overrides the default template to display.
-# Any new configuration fields are available in exercise object in template.
-#template: sample_course/custom_instructions.html
+    <h1>Grade from Git</h1>
+    <p>This is an example of grading a submission from user's Git repository.</p>
 
 view_type: access.types.stdasync.acceptGitAddress
 #require_gitlab: git.niksula.hut.fi
-
-# Overrides the default feedback template to render.
-# Any new configuration fields are available in exercise object in template.
-#feedback_template: sample_course/task_feedback.html
-# Passes grading task output directly.
-#feedback_template: access/task_direct.html
 
 actions:
   #- type: grader.actions.gitlabquery
   #  token: xxxxxxxxxxxxxxxxxxxx
   #  private: True
   #  forks: user/project
-  - type: grader.actions.gitclone
-    title: Access Git
-    points: 5
-  - type: grader.actions.sandbox
-    title: List contents
-    cmd: [ "/usr/local/sandbox/template.sh" ]
+  - title: Access Git
+    type: grader.actions.gitclone
+    #files: Project1/program.py Project1/module.py
+  - title: List contents
+    type: grader.actions.sandbox
+    dir: user-repo
+    cmd: [ "template.sh" ]
+  #- type: grader.actions.sandbox
+  #  cmd: [ "python", "program.py" ]
