Fix virtualenv script, adjust sample memory limits.

--- a/exercises/sample_course/hello_python.yaml
+++ b/exercises/sample_course/hello_python.yaml
@@ -22,5 +22,5 @@ actions:
     #type: grader.actions.sandbox # Using other type for unittest output.
     cmd: [ "virtualenv.sh", "sample", "python", "tests.py" ]
     time: 3
-    memory: 100k
+    memory: 50m
     disk: 0
