--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ feedparser
 icalendar==3.9.0
 mimeparse==0.1.3
 oauthlib==0.6.2
+Pillow==2.9.0
 python-dateutil==2.4.2
 python-mimeparse==0.1.4
 pytz
