--- a/exercises/sample_course/hello_scala.yaml
+++ b/exercises/sample_course/hello_scala.yaml
@@ -25,7 +25,7 @@ max_points: 5
 
 actions:
   - type: grader.actions.prepare
-    charset: us-ascii
+    charset: UTF-8
     cp_exercises: HelloScalaTest.scala->user/HelloScalaTest.scala
   - title: Compiling
     type: grader.actions.sandbox
