Update scripts for creation of grader user

--- a/doc/etc-init-uwsgi.conf
+++ b/doc/etc-init-uwsgi.conf
@@ -4,4 +4,4 @@ stop on runlevel [06]
 
 respawn
 
-exec /home/[shell-username]/venv/bin/uwsgi --emperor /etc/uwsgi
+exec /srv/grader/venv/bin/uwsgi --emperor /etc/uwsgi
