--- a/doc/etc-uwsgi-grader.ini
+++ b/doc/etc-uwsgi-grader.ini
@@ -1,11 +1,11 @@
 [uwsgi]
-chdir=/home/[shell-username]/mooc-grader
-home=/home/[shell-username]/venv
+chdir=/srv/grader/mooc-grader
+home=/srv/grader/venv
 module=grader.wsgi:application
 daemonize=/var/log/uwsgi/%n.log
 socket=127.0.0.1:3031
-uid=[shell-username]
-gid=users
+uid=grader
+gid=grader
 master=True
 processes=5
 env=LANG=en_US.UTF-8
