--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ oauthlib==0.6.2
 Pillow==2.9.0
 python-dateutil==2.4.2
 python-mimeparse==0.1.4
+python-social-auth==0.2.13
 pytz
 requests==2.7.0
 six==1.9.0
