--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==1.7.7
 django-bootstrap-form==3.2
 django-tastypie==0.12.1
 feedparser
+html5lib
 icalendar==3.9.0
 mimeparse==0.1.3
 oauthlib==0.6.2
