Initial implementation of API using Django REST Framework
Three original commits were merged to this one and some files were relocated
from original to more future proof locations. Basically all work is gredited
to author.

Commit doesn't remove verion 1 of the api, as it originally did. Wwe will do
that at later date, but not yet.

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ beautifulsoup4==4.3.2
 Django==1.7.7
 django-bootstrap-form==3.2
 django-tastypie==0.12.1
+djangorestframework==3.3.3
 feedparser
 html5lib
 icalendar==3.9.0
