--- a/requirements.txt
+++ b/requirements.txt
@@ -18,5 +18,7 @@ six==1.9.0
 South==0.8.2
 unittest-xml-reporting==1.11.0
 
-#selenium==2.45.0
-#nose==1.3.6
+# Required to run browser tests.
+#selenium
+#nose
+
