--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ python-dateutil==2.4.2
 python-mimeparse==0.1.4
 python-social-auth==0.2.13
 pytz
+reportlab==3.3.0
 requests==2.7.0
 six==1.9.0
 South==0.8.2
