--- a/requirements.txt
+++ b/requirements.txt
@@ -5,15 +5,15 @@ django-bootstrap-form==3.2.1
 django-html5-colorfield==1.0
 djangorestframework==3.6.3
 djangorestframework-csv==2.0.0
--e git+https://github.com/raphendyr/drf-extensions.git@2175f4f5486fab3e132a72abed48b8e8e37fd8b8#egg=drf_extensions
-raphendyr-django-essentials==1.1.0
+git+https://github.com/raphendyr/drf-extensions.git@2175f4f5486fab3e132a72abed48b8e8e37fd8b8#egg=drf_extensions
+raphendyr-django-essentials==1.2.0
 feedparser==5.2.1
 html5lib
 cachetools==1.1.6
 icalendar==3.9.0
 mimeparse==0.1.3
 oauthlib==2.0.2
-Pillow==4.2.1
+Pillow>=4.0.0
 python-dateutil==2.4.2
 python-mimeparse==0.1.4
 social-auth-app-django==1.2.0
