--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ django-bootstrap-form==3.2.1
 django-html5-colorfield==1.0
 djangorestframework==3.6.3
 djangorestframework-csv==2.0.0
-git+https://github.com/raphendyr/drf-extensions.git@2175f4f5486fab3e132a72abed48b8e8e37fd8b8#egg=drf_extensions
+git+https://github.com/raphendyr/drf-extensions.git@2175f4f5486fab3e132a72abed48b8e8e37fd8b8#egg=drf_extensions==0.3.2
 raphendyr-django-essentials==1.2.0
 feedparser==5.2.1
 html5lib
