--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ git+https://github.com/Aalto-LeTech/js-jquery-toggle.git@1.0.0#egg=js-jquery-tog
 git+https://github.com/Aalto-LeTech/django-colortag.git@1.3.1#egg=django-colortag==1.3.1
 feedparser==5.2.1
 html5lib
+lxml==4.2.1
 cachetools==1.1.6
 icalendar==3.9.0
 mimeparse==0.1.3
