--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ Pillow>=4.0.0
 python-dateutil==2.4.2
 python-mimeparse==0.1.4
 social-auth-app-django==1.2.0
+social-auth-core >=3.0.0, <4
 pytz==2017.2
 reportlab >=3.3.0, <4
 requests==2.18.4
