--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,29 @@
 # Usage: pip install -r requirements.txt
-beautifulsoup4==4.6.0
-Django>=1.10.8, <1.11
-django-bootstrap-form==3.2.1
+beautifulsoup4~=4.6.3
+Django~=1.11.0
+django-bootstrap-form==3.4
 django-html5-colorfield==1.0
-djangorestframework==3.6.3
-djangorestframework-csv==2.0.0
-git+https://github.com/raphendyr/drf-extensions.git@2175f4f5486fab3e132a72abed48b8e8e37fd8b8#egg=drf_extensions==0.3.2
+djangorestframework~=3.9.3
+djangorestframework-csv~=2.1.0
+-e git+https://github.com/raphendyr/drf-extensions.git@reimplement_nested_routes_v4#egg=drf_extensions==0.5.1
 raphendyr-django-essentials==1.3.0
 git+https://github.com/Aalto-LeTech/js-jquery-toggle.git@1.0.0#egg=js-jquery-toggle-django==1.0.0&subdirectory=django
-git+https://github.com/Aalto-LeTech/django-colortag.git@1.3.1#egg=django-colortag==1.3.1
-feedparser==5.2.1
+git+https://github.com/Aalto-LeTech/django-colortag.git@2.0.0#egg=django-colortag==2.0.0
+feedparser~=5.2.1
 html5lib
-lxml==4.2.1
-cachetools==1.1.6
-icalendar==3.9.0
-mimeparse==0.1.3
-oauthlib==2.0.2
+lxml~=4.3.3
+cachetools~=3.1.0
+icalendar~=4.0.3
+mimeparse~=0.1.3
+oauthlib~=3.0.1
 Pillow>=4.0.0
-python-dateutil==2.4.2
-python-mimeparse==0.1.4
-social-auth-app-django==1.2.0
+python-dateutil~=2.8.0
+python-mimeparse~=1.6.0
+social-auth-app-django~=3.1.0
 social-auth-core >=3.0.0, <4
-pytz==2017.2
+pytz==2019.1
 reportlab >=3.3.0, <4
-requests==2.18.4
-six==1.11.0
+requests~=2.21.0
+six~=1.12.0
 South==0.8.2
-unittest-xml-reporting==1.11.0
+unittest-xml-reporting~=2.5.1
