Upgrade to Django 2.2
Fix the MIDDLEWARE setting in Selenium tests.

Update management commands.
Some management CLI commands used the old API for parsing
arguments. There were some small bugs or typos too.
The commands still accept the same arguments as before.

Update the Django version in README and other docs.

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ test_results/
 selenium_test/aplus.out
 selenium_test/example_grader.out
 selenium_test/server.ports
+selenium_test/grader/db.sqlite3
 
 *~
 *.swp
