New Shibboleth authentication
* Dictionary style settings for shibboleth configuration
* Implement a parser for shib2 encoded multivalue fields.
* Parse only a single student number, based on a config value
* Authentication backend is rewritten, but should be more robust
  and handle problems better than before.
  e.g. before, oo long input values were just cut, and thus multiple
  different inputs might have resulted same output.
  Now we raise errors instead and require someone to fix the actual
  problem.
* Better debug output.. So we can actually find out these problems :)

--- a/doc/nginx/aplus-nginx-shib.conf
+++ b/doc/nginx/aplus-nginx-shib.conf
@@ -94,14 +94,19 @@ server {
     # authorizer so we must prevent spoofing.
     # from: https://github.com/nginx-shib/nginx-http-shibboleth/blob/master/includes/shib_clear_headers
     include shib_clear_headers;
+    # NOTE: add all fields which might be read by your A+ installation!
+    # TODO: get newer headers-more module with wildcard support!
     more_clear_input_headers
-      Shib-EPPN
-      Shib-GivenName
-      Shib-SN
-      Shib-mail
-      Shib-SchacPersonalUniqueCode
-      Persistent-Id
-      Shib-Targeted-Id;
+      shib-eppn
+      shib-givenName
+      shib-sn
+      shib-cn
+      shib-displayName
+      shib-mail
+      shib-preferredLanguage
+      shib-schacPersonalUniqueCode
+      persistent-id
+      shib-targeted-id;
 
     proxy_pass_header Server;
     include proxy_params;
