--- a/assets_src/translate-js/package.json
+++ b/assets_src/translate-js/package.json
@@ -10,13 +10,14 @@
   "author": "",
   "license": "GPL-3.0-only",
   "dependencies": {
-    "node-polyglot": "^2.2.2"
+    "node-polyglot": "^2.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "babelify": "^8.0.0",
-    "browserify": "^16.2.0",
+    "browserify": "^16.5.0",
+    "lodash": "^4.17.13",
     "uglify-es": "^3.3.9"
   }
 }
