Switch to NPM verion of bootstrap-sass

--- a/assets/docker-compose.yml
+++ b/assets/docker-compose.yml
@@ -5,5 +5,5 @@ services:
     build: .
     volumes:
       - ./css:/style/css
-      - ./sass:/style/sass
-    command: "--watch /style/sass:/style/css --poll"
+      - ./:/style/raw
+    command: "--watch /style/raw/sass:/style/css --poll"
