Use SASS to build Bootstrap
This adds SASS source files and generated CSS, as well as Bootstrap
fonts.

These can be used, alongside other things, to make tweaks to the
Bootstrap theme, until we have a more production-ready setup using SASS.

Starts https://github.com/apluslms/a-plus/issues/594

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,9 @@ selenium_test/grader/db.sqlite3
 *~
 *.swp
 *.swo
+
+node_modules/
+# Temporary for local SASS development
+assets/Dockerfile
+assets/docker-compose.yml
+assets/vendor/
