Add support of building CSS from SASS sources
This adds SASS source files and generated CSS, as well as Bootstrap
fonts. Bootstrap sources are pulled earlier in the Drone pipeline,
which are used with A+ SASS files to build main.css etc.

For now, build results (e.g. css files) should be included in the git.

Co-Authored-By: Matthew Higgins <matthew.higgins@aalto.fi>

--- a/.drone.yml
+++ b/.drone.yml
@@ -14,3 +14,7 @@ steps:
       echo ">> Building and installing assets package $${dir##*/}"
       ( cd "$dir" && npm install --unsafe-perm )
     done
+- name: compile sass
+  image: apluslms/develop-sass:1
+  commands:
+  - sass --style=compressed assets/sass:assets/css
