--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ git+https://github.com/Aalto-LeTech/js-jquery-toggle.git@1.0.0#egg=js-jquery-tog
 git+https://github.com/Aalto-LeTech/django-colortag.git@2.1.1#egg=django-colortag==2.1.1
 feedparser~=5.2.1
 html5lib
-lxml ~= 4.3.2
+lxml >=4.3.2, <5
 #lz4==3.1.0
 cachetools~=3.1.0
 icalendar~=4.0.3
