Move uwsgi configuration into an ini file
Moving configuration from the systemd service file into a separate
configuration file that's placed under the home directory of the service
account

--- a/doc/apache2/aplus-apache2.conf
+++ b/doc/apache2/aplus-apache2.conf
@@ -44,7 +44,7 @@
 		Options -Indexes
 		Options FollowSymLinks
 		SetHandler uwsgi-handler
-		uWSGISocket 127.0.0.1:3031
+		uWSGISocket /run/aplus/web-uwsgi.socket
 		uWSGIMaxVars 256
 	</Location>
 	<Location /api/>
@@ -52,7 +52,7 @@
 		Options -Indexes
 		Options FollowSymLinks
 		SetHandler uwsgi-handler
-		uWSGISocket 127.0.0.1:3032
+		uWSGISocket /run/aplus/api-uwsgi.socket
 		uWSGIForceScriptName /
 		uWSGIMaxVars 256
 	</Location>
@@ -72,7 +72,7 @@
 			SetHandler shib
 		</Location>
 		<Location /shibboleth>
-			AuthType shibboleth 
+			AuthType shibboleth
 			Require valid-user
 			ShibRequireSession On
 		</Location>
