--- a/doc/nginx/aplus-nginx-shib.conf
+++ b/doc/nginx/aplus-nginx-shib.conf
@@ -69,21 +69,13 @@ server {
   }
   location / {
     if (-f /srv/aplus/a-plus/maintenance) { return 503; }
-    proxy_pass_header Server;
-    include proxy_params;
-    proxy_redirect off;
-    proxy_connect_timeout 10;
-    proxy_read_timeout 30;
-    proxy_pass http://aplus-web;
+    include uwsgi_params;
+    uwsgi_pass aplus-web;
   }
   location /api/ {
     if (-f /srv/aplus/a-plus/maintenance) { return 503; }
-    proxy_pass_header Server;
-    include proxy_params;
-    proxy_redirect off;
-    proxy_connect_timeout 10;
-    proxy_read_timeout 30;
-    proxy_pass http://aplus-api;
+    include uwsgi_params;
+    uwsgi_pass aplus-api;
   }
   location /shibboleth {
     if (-f /srv/aplus/a-plus/maintenance) { return 503; }
@@ -108,11 +100,7 @@ server {
       persistent-id
       shib-targeted-id;
 
-    proxy_pass_header Server;
-    include proxy_params;
-    proxy_redirect off;
-    proxy_connect_timeout 10;
-    proxy_read_timeout 30;
-    proxy_pass http://aplus-web;
+    include uwsgi_params;
+    uwsgi_pass aplus-web;
   }
 }
