--- a/doc/nginx/aplus-nginx.conf
+++ b/doc/nginx/aplus-nginx.conf
@@ -1,3 +1,10 @@
+upstream aplus-web {
+  server unix:/run/aplus/web-uwsgi.socket;
+}
+upstream aplus-api {
+  server unix:/run/aplus/api-uwsgi.socket;
+}
+
 server {
   listen 80 default_server;
   listen [::]:80 default_server ipv6only=on;
@@ -42,11 +49,11 @@ server {
   location / {
     if (-f /srv/aplus/a-plus/maintenance) { return 503; }
     include uwsgi_params;
-    uwsgi_pass unix:/run/aplus/web-uwsgi.socket;
+    uwsgi_pass aplus-web;
   }
   location /api/ {
     if (-f /srv/aplus/a-plus/maintenance) { return 503; }
     include uwsgi_params;
-    uwsgi_pass unix:/run/aplus/api-uwsgi.socket;
+    uwsgi_pass aplus-api;
   }
 }
