--- a/doc/nginx/aplus-api-uwsgi.service
+++ b/doc/nginx/aplus-api-uwsgi.service
@@ -9,7 +9,7 @@ SyslogIdentifier=aplus
 StandardOutput=syslog
 StandardError=syslog
 WorkingDirectory=/srv/aplus/a-plus/
-ExecStart=/srv/aplus/venv/bin/uwsgi --single-interpreter --master --master-fifo=/run/aplus/api-uwsgi.master --stats=/run/aplus/api-uwsgi.stats --socket=/run/aplus/api-uwsgi.socket --chmod=666 --ini /srv/aplus/uwsgi-aplus-api.ini --touch-chain-reload /srv/aplus/uwsgi-aplus-api.ini
+ExecStart=/srv/aplus/venv/bin/uwsgi --ini /srv/aplus/uwsgi-aplus-api.ini
 ExecReload=/bin/sh -c "echo c > /run/aplus/api-uwsgi.master"
 Restart=always
 KillSignal=SIGQUIT
