--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ git+https://github.com/Aalto-LeTech/django-colortag.git@2.1.1#egg=django-colorta
 feedparser~=5.2.1
 html5lib
 lxml >=4.3.2, <5
+# NOTE: Change version number in requirements_prod.txt if updated
 #lz4==3.1.0
 cachetools~=3.1.0
 icalendar~=4.0.3
