Add Django Debug Toolbar
The Django Debug Toolbar  is a tool recommended in the Django project to
measure some performance metrics.

https://docs.djangoproject.com/en/3.1/topics/performance/#performance-benchmarking

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Usage: pip install -r requirements.txt
 beautifulsoup4 ~= 4.9.3
 Django ~= 2.2.19
+django-debug-toolbar >= 3.2
 django-bootstrap-form ~= 3.4
 django-html5-colorfield == 1.0
 django-settingsdict ~= 1.1.1
