Add multi-organization support to Haka login.
Adds organization attribute to UserProfile that is set based on information
received from Haka. Local organization of the A+ installation is specified
in settings, and used in determining whether a user is internal or external
to organization where A+ is installed. The button text for Haka login is
changed (the old text strings are still kept in settings for possible
future use). Closes #788.

--- a/doc/nginx/aplus-nginx-shib.conf
+++ b/doc/nginx/aplus-nginx-shib.conf
@@ -125,6 +125,7 @@ server {
       shib-mail
       shib-preferredLanguage
       shib-schacPersonalUniqueCode
+      shib-schacHomeOrganization
       persistent-id
       shib-targeted-id;
 
