Add grader IP address verification for Kubernetes
The existing authentication code for receiving grading results
from mooc-grader checks whether the grader service host IP matches
the IP the jobs were submitted in. In a Kubernetes environment,
this doesn't work, as A+ refers to mooc-grader via a service URL /
IP address, which differs from mooc-grader container's internal
IP address.

The new solution adds two new global configuration flags,
KUBERNETES_MODE and KUBERNETES_NAMESPACE. If KUBERNETES_MODE is
set to True, instead of the previously defined authentication layer,
A+ now queries the registered Kubernetes API server for mooc-grader
pod IP addresses in the KUBERNETES_NAMESPACE, and checks if
the request IP matches one of those, essentially providing the same
functionality as before.

--- a/requirements_prod.txt
+++ b/requirements_prod.txt
@@ -5,3 +5,5 @@ wheel
 # This extra library is required if postgres is used as the database
 psycopg2 >= 2.8.6, < 3
 lz4 ~= 3.1.3
+# Required for Kubernetes based deployment
+kubernetes == 12.0.1
