--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,28 @@
 # Usage: pip install -r requirements.txt
-beautifulsoup4 ~=4.9.3
-Django ~=2.2.19
-django-bootstrap-form ~=3.4
-django-html5-colorfield==1.0
-django-settingsdict ~=1.1.1
-djangorestframework ~=3.12.2
-djangorestframework-csv ~=2.1.0
+beautifulsoup4 ~= 4.9.3
+Django ~= 2.2.19
+django-bootstrap-form ~= 3.4
+django-html5-colorfield == 1.0
+django-settingsdict ~= 1.1.1
+djangorestframework ~= 3.12.2
+djangorestframework-csv ~= 2.1.0
 -e git+https://github.com/apluslms/drf-extensions.git@reimplement_nested_routes_v5#egg=drf_extensions==0.7.1
-raphendyr-django-essentials ~=1.3.0
+raphendyr-django-essentials ~= 1.3.0
 git+https://github.com/apluslms/js-jquery-toggle.git@1.0.0#egg=js-jquery-toggle-django==1.0.0&subdirectory=django
 git+https://github.com/apluslms/django-colortag.git@2.1.1#egg=django-colortag==2.1.1
-feedparser ~=6.0.2
-html5lib ~=1.1
-lxml >=4.6.3, <5
+feedparser ~= 6.0.2
+html5lib ~= 1.1
+lxml >= 4.6.3, < 5
 # NOTE: Change version number in requirements_prod.txt if updated
-#lz4 ~=3.1.3
-cachetools ~=4.2.1
-icalendar ~=4.0.7
-oauthlib ~=3.1.0
-Pillow >=8.2.0, <9
-python-dateutil ~=2.8.1
-social-auth-app-django >=4.0.0, <5
-social-auth-core >=4.1.0, <5
-pytz >=2021.1
-reportlab >=3.5.0, <4
-requests >=2.25.1, <3
-unittest-xml-reporting >=3.0.4, <4
+#lz4 ~= 3.1.3
+cachetools ~= 4.2.1
+icalendar ~= 4.0.7
+oauthlib ~= 3.1.0
+Pillow >= 8.2.0, < 9
+python-dateutil ~= 2.8.1
+social-auth-app-django >= 4.0.0, < 5
+social-auth-core >= 4.1.0, < 5
+pytz >= 2021.1
+reportlab >= 3.5.0, < 4
+requests >= 2.25.1, < 3
+unittest-xml-reporting >= 3.0.4, < 4
