--- a/requirements_prod.txt
+++ b/requirements_prod.txt
@@ -1,4 +1,4 @@
-python-memcached >= 1.59, < 2
+pymemcache >= 3.5.0, < 4
 uwsgi >= 2.0.19.1, < 3
 # Required for building packages in requirements.txt
 wheel
