Use Ubuntu 20.04 in the testing container image
* Ubuntu 20.04 has Python 3.8. Newer Ubuntu uses Python 3.10.
  However, the Selenium tests do not work on Python 3.10 due
  to the unmaintained Nose library. See issue #1030.
* Update the Firefox Gecko driver.

--- a/.github/workflows/Dockerfile
+++ b/.github/workflows/Dockerfile
@@ -1,6 +1,6 @@
-FROM ubuntu:latest
+FROM ubuntu:20.04
 
-ARG GECKODRIVER_VERSION=0.30.0
+ARG GECKODRIVER_VERSION=0.31.0
 ARG GECKODRIVER_FILE=geckodriver-v${GECKODRIVER_VERSION}-linux64.tar.gz
 ARG GECKODRIVER_LINK=https://github.com/mozilla/geckodriver/releases/download/v${GECKODRIVER_VERSION}/${GECKODRIVER_FILE}
 
