--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ lxml >= 4.6.3, < 5
 cachetools ~= 4.2.1
 icalendar ~= 4.0.7
 oauthlib ~= 3.2.1
+jwcrypto ~= 1.5.0
 Pillow >= 9.0.0
 python-dateutil ~= 2.8.1
 social-auth-app-django >= 5.0.0, < 6
