--- a/.prospector.yaml
+++ b/.prospector.yaml
@@ -26,6 +26,7 @@ pylint:
     - django-not-configured
     - relative-beyond-top-level
     - cyclic-import
+    - imported-auth-user
   options:
     jobs: 0
 
