--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
 # Usage: pip install -r requirements.txt
 beautifulsoup4 ~= 4.9.3
-Django ~= 3.2.4
+Django ~= 4.2.3
 django-bootstrap-form ~= 3.4
-django-html5-colorfield == 1.0
+django-html5-colorfield >= 2.0, < 3
 django-settingsdict ~= 1.1.1
-djangorestframework ~= 3.13.1
+djangorestframework ~= 3.14.0
 djangorestframework-csv ~= 2.1.0
 git+https://github.com/apluslms/drf-extensions.git@reimplement_nested_routes_v6#egg=drf_extensions==0.8.0.dev1
-git+https://github.com/apluslms/django-essentials.git@1.5.0#egg=django-essentials==1.5.0
+git+https://github.com/apluslms/django-essentials.git@1.6.0#egg=django-essentials==1.6.0
 git+https://github.com/apluslms/js-jquery-toggle.git@1.1.0#egg=js-jquery-toggle-django==1.1.0&subdirectory=django
-git+https://github.com/apluslms/django-colortag.git@2.3.0#egg=django-colortag==2.3.0
+git+https://github.com/apluslms/django-colortag.git@2.4.0#egg=django-colortag==2.4.0
 feedparser ~= 6.0.2
 html5lib ~= 1.1
 lxml >= 4.6.3, < 5
@@ -23,7 +23,6 @@ Pillow >= 9.0.0
 python-dateutil ~= 2.8.1
 social-auth-app-django >= 5.0.0, < 6
 social-auth-core >= 4.1.0, < 5
-pytz >= 2021.1
 reportlab >= 3.5.0, < 4
 requests >= 2.25.1, < 3
 unittest-xml-reporting >= 3.0.4, < 4
