--- a/requirements_prod.txt
+++ b/requirements_prod.txt
@@ -7,3 +7,5 @@ psycopg2 >= 2.8.6, < 3
 lz4 ~= 4.3.2
 # Required for Kubernetes based deployment
 kubernetes == 12.0.1
+# The kubernetes package is not yet compatible with urllib3 2.0.
+urllib3 >= 1.26.16, < 2.0
