Fix warnings in develop-aplus tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -11,3 +11,12 @@ DJANGO_SETTINGS_MODULE = aplus.settings
 env =
     APLUS_BASE_URL=http://localhost
     APLUS_LOCAL_SETTINGS=aplus/local_settings.test.py
+
+filterwarnings =
+    ignore::DeprecationWarning:format_cef._cef.base.*
+    ignore::DeprecationWarning:bootstrapform.meta.*
+    ignore::DeprecationWarning:model_utils.*
+    ignore::DeprecationWarning:importlib._bootstrap.*
+    ignore::DeprecationWarning:reportlab.lib.rl_safe_eval.*
+    ignore::Warning:django_settingsdict.*
+    ignore::Warning:django.db.models.options.*
